<resources>
    <string name="app_name">FBU_Final_Project</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="create">Create</string>
    <string name="home">Home</string>
    <string name="my_events">Subscriptions</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="end_date">END DATE</string>
    <string name="end_time">END TIME</string>
    <string name="start_date">START DATE</string>
    <string name="start_time">START TIME</string>
    <string name="event_time">Event Time</string>
    <string name="tags">Tags</string>
    <string name="sports">Sports</string>
    <string name="music">Music</string>
    <string name="art">Art</string>
    <string name="tech">Tech</string>
    <string name="club">Club</string>
    <string name="professional">Professional</string>
    <string name="add_image">Add Image From Drive</string>
    <string name="search">Search</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribe">Subscribe</string>
    <string name="select_image">Select Image:</string>
    <string name="view_attendees">View Attendees</string>
    <string name="who_s_going">Who\'s Going:</string>
    <string name="delete">Delete</string>
</resources>