<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="42dp" />

    <EditText
        android:id="@+id/etFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="42dp" />

    <EditText
        android:id="@+id/etLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFirstname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="42dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="121dp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLastname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="332dp" />
</RelativeLayout>